--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "opinion-ate-js",
+  "main": "index.js",
+  "repository": "git@github.com:Chip-L/opinion-ate-js.git",
+  "author": "clong long <chip_long@yahoo.com>",
+  "license": "MIT",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "cypress": "cypress open",
+    "lint": "eslint src",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -11,17 +23,28 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.1"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
-    ]
+      "react-app/jest",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier",
+      "cypress"
+    ],
+    "env": {
+      "cypress/globals": true
+    },
+    "rules": {
+      "prettier/prettier": "warn"
+    }
   },
   "browserslist": {
     "production": [
@@ -35,8 +58,8 @@
       "last 1 safari version"
     ]
   },
-  "main": "index.js",
-  "repository": "git@github.com:Chip-L/opinion-ate-js.git",
-  "author": "clong long <chip_long@yahoo.com>",
-  "license": "MIT"
+  "prettier": {
+    "singleAttributePerLine": true,
+    "singleQuote": true
+  }
 }
