--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,14 @@
 
 # testing
 /coverage
+/cypress/videos
 
 # production
 /build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
